--- a/notebooks/формулы.ipynb
+++ b/notebooks/формулы.ipynb
@@ -18,11 +18,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "92011ef2-d140-4042-bdc8-b35bf4d8397c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Характеристика 4-х осной ж/д платформы\n",
+    "L = 13400 # Длина пола\n",
+    "2870 # Ширина пола\n",
+    "Qv = 21 # Масса тары\n",
+    "wugr = 1310 # Высота пола от УГР\n",
+    "800 # Высота центра тяжести(ЦТ) от УГР\n",
+    "9720 # База платформы\n",
+    "\n",
+    "delta = [150, 0, 0, 0] # расстояние между грузами (нет в записке)\n",
+    "\n",
+    "# Вес - в тоннах.\n",
+    "# Длина, ширина, высота - в мм.\n",
+    "cargo = [ # грузы\n",
+    "    {'length': 1080, 'width': 1580, 'height': 390, 'weight': 395 / 1000},  \n",
+    "    {'length': 3650, 'width': 3320, 'height': 1500, 'weight': 6670 / 1000},\n",
+    "    {'length': 4100, 'width': 1720, 'height': 1150, 'weight': 1865 / 1000},\n",
+    "    {'length': 3870, 'width': 2890, 'height': 1020, 'weight': 4085 / 1000},\n",
+    "]\n",
+    "weightSum = sum(map(lambda x: x['weight'], cargo))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -34,47 +54,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "64ff766f-5ee1-425f-9259-7b198ddebd97",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f455f563-4705-41aa-b1dc-45a27c8488e6",
-   "metadata": {},
-   "source": [
-    "### Создание word"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "da9ced35-4308-4a3d-bfb9-647ed72ec104",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'test'}\n"
+      "694.4967345370733 265.7320299867706 1942.750672301191\n"
      ]
     }
    ],
    "source": [
-    "from mailmerge import MailMerge\n",
+    "for index, item in enumerate(cargo):\n",
+    "    if index:\n",
+    "        prev = cargo[index - 1]\n",
+    "        item['ct'] = (item['length'] + prev['length']) / 2 + prev['ct'] + delta[index]\n",
+    "    else:\n",
+    "        item['ct'] = item['length'] / 2 + delta[index]\n",
     "\n",
-    "filename = 'test.docx'\n",
     "\n",
-    "document = MailMerge(filename)\n",
-    "print(document.get_merge_fields())"
+    "# Продольное смещение грузов в вагоне - в мм.\n",
+    "Lc = 0.5*L - (sum(map(lambda x: x['weight'] * x['ct'], cargo)) / weightSum)\n",
+    "\n",
+    "# Продольное смещение грузов с вагоном - в мм.\n",
+    "Lcv = 0.5*L - (sum(map(lambda x: x['weight'] * x['ct'], cargo)) + Qv * L/2) / (weightSum + Qv)\n",
+    "\n",
+    "# Общая высота ЦТ - в мм.\n",
+    "H = sum(map(lambda x: x['weight'] * (x['height']/2 + wugr), cargo)) / weightSum\n",
+    "\n",
+    "print(Lc, Lcv, H)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9f882de-23ff-45b7-90b7-5a3964fcbf7b",
+   "id": "5257a00d-6f7d-49e6-9a25-969d462ba71e",
    "metadata": {},
    "outputs": [],
    "source": []
