add model to system

--- a/notebooks/формулы.ipynb
+++ b/notebooks/формулы.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "id": "92011ef2-d140-4042-bdc8-b35bf4d8397c",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 64,
    "id": "0340d6e8-7e77-4c0a-b2cb-4063fe543bf3",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
      "output_type": "stream",
      "text": [
       "free_L = 700\n",
-      "free_L_for_one_cargo = 175.0\n"
+      "free_L_for_one_cargo = 175\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
     "free_L = L - sum([item['length'] for item in cargo])\n",
     "print(f'{free_L = }')\n",
     "# Даём пустое пространство на один груз, где можем его двигать.\n",
-    "free_L_for_one_cargo = free_L / len(cargo)\n",
+    "free_L_for_one_cargo = free_L // len(cargo)\n",
     "print(f'{free_L_for_one_cargo = }')\n",
     "\n",
     "if free_L < 0:\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 61,
    "id": "d3505744-c659-4673-b8f1-97c02c7d32ea",
    "metadata": {},
    "outputs": [
@@ -227,14 +227,14 @@
      "output_type": "stream",
      "text": [
       "Началась оптимизация, где первый груз с индексом 0\n",
-      "2020.0099884748379\n",
+      "2015.7913945447563\n",
       "Началась оптимизация, где первый груз с индексом 1\n",
-      "2020.0099884748379\n",
+      "2015.7913945447563\n",
       "Началась оптимизация, где первый груз с индексом 2\n",
-      "-0.003841721090793726\n",
+      "-0.014598540145925654\n",
       "Началась оптимизация, где первый груз с индексом 3\n",
-      "-0.003841721090793726\n",
-      "-0.003841721090793726\n"
+      "-0.014598540145925654\n",
+      "-0.014598540145925654\n"
      ]
     }
    ],
@@ -252,7 +252,7 @@
     "        self._border_epsilon_step = border_epsilon_step  # Рандомное значение добавляется к step.\n",
     "        self._count_early_stop = count_early_stop\n",
     "        \n",
-    "        self.result = self._optimize(cargo)\n",
+    "        self._optimize(cargo)\n",
     "\n",
     "\n",
     "    def _init_delta(self, cargo: list, start_idx=0):\n",
@@ -271,7 +271,7 @@
     "    \n",
     "            prev_border = 0\n",
     "            for idx, item in enumerate(copy_cargo):\n",
-    "    \n",
+    "\n",
     "                copy_cargo[idx]['delta'] = random.randint(prev_border, prev_border + free_L_for_one_cargo - 1)\n",
     "    \n",
     "                # Обновляем левую границу.\n",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 62,
    "id": "7bb2fb60-3752-4389-9139-72b9341d8f82",
    "metadata": {},
    "outputs": [
@@ -376,29 +376,25 @@
        "  'width': 1720,\n",
        "  'height': 1150,\n",
        "  'weight': 1.865,\n",
-       "  'delta': 106,\n",
-       "  'ct': 106},\n",
+       "  'delta': 153},\n",
        " {'length': 3870,\n",
        "  'width': 2890,\n",
        "  'height': 1020,\n",
        "  'weight': 4.085,\n",
-       "  'delta': 4557,\n",
-       "  'ct': 4557},\n",
+       "  'delta': 4522},\n",
        " {'length': 1080,\n",
        "  'width': 1580,\n",
        "  'height': 390,\n",
        "  'weight': 0.395,\n",
-       "  'delta': 8510,\n",
-       "  'ct': 8510},\n",
+       "  'delta': 8651},\n",
        " {'length': 3650,\n",
        "  'width': 3320,\n",
        "  'height': 1500,\n",
        "  'weight': 6.67,\n",
-       "  'delta': 9749,\n",
-       "  'ct': 9749}]"
+       "  'delta': 9749}]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
