update model and new result

--- a/notebooks/формулы.ipynb
+++ b/notebooks/формулы.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "# Характеристика 4-х осной ж/д платформы\n",
     "L = 13400 # Длина пола\n",
-    "2870 # Ширина пола\n",
+    "W = 2870 # Ширина пола\n",
     "Qv = 21 # Масса тары\n",
     "wugr = 1310 # Высота пола от УГР\n",
     "height_ct_vagon = 800 # Высота центра тяжести(ЦТ) от УГР\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "id": "0340d6e8-7e77-4c0a-b2cb-4063fe543bf3",
    "metadata": {},
    "outputs": [
@@ -198,16 +198,17 @@
     "\n",
     "# грузы\n",
     "cargo = [\n",
-    "    {'length': 1080, 'width': 1580, 'height': 390, 'weight': 395 / 1000, 'delta': None},  \n",
-    "    {'length': 3650, 'width': 3320, 'height': 1500, 'weight': 6670 / 1000, 'delta': None},\n",
-    "    {'length': 4100, 'width': 1720, 'height': 1150, 'weight': 1865 / 1000, 'delta': None},\n",
-    "    {'length': 3870, 'width': 2890, 'height': 1020, 'weight': 4085 / 1000, 'delta': None},\n",
+    "    {'length': 3650, 'width': 3320, 'height': 1500, 'weight': 6670 / 1000, 'delta_length': None, 'delta_width': None},\n",
+    "    {'length': 1080, 'width': 1580, 'height': 390, 'weight': 395 / 1000, 'delta_length': None, 'delta_width': None}, \n",
+    "    {'length': 3870, 'width': 2890, 'height': 1020, 'weight': 4085 / 1000, 'delta_length': None, 'delta_width': None},\n",
+    "    {'length': 4100, 'width': 1720, 'height': 1150, 'weight': 1865 / 1000, 'delta_length': None, 'delta_width': None},\n",
     "]\n",
     "weightSum = sum(map(lambda x: x['weight'], cargo))\n",
     "\n",
     "# Свободное место на платформе, если расположить все грузы.\n",
     "free_L = L - sum([item['length'] for item in cargo])\n",
     "print(f'{free_L = }')\n",
+    "\n",
     "# Даём пустое пространство на один груз, где можем его двигать.\n",
     "free_L_for_one_cargo = free_L // len(cargo)\n",
     "print(f'{free_L_for_one_cargo = }')\n",
@@ -218,155 +219,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "d3505744-c659-4673-b8f1-97c02c7d32ea",
+   "execution_count": 13,
+   "id": "0655966b-24e2-4be4-b038-c155818d1bf4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Началась оптимизация, где первый груз с индексом 0\n",
-      "2015.7913945447563\n",
-      "Началась оптимизация, где первый груз с индексом 1\n",
-      "2015.7913945447563\n",
-      "Началась оптимизация, где первый груз с индексом 2\n",
-      "-0.014598540145925654\n",
-      "Началась оптимизация, где первый груз с индексом 3\n",
-      "-0.014598540145925654\n",
-      "-0.014598540145925654\n"
+      "0.0065309258534398396 1349.6799846331157\n"
      ]
     }
    ],
    "source": [
+    "import itertools\n",
+    "\n",
+    "\n",
     "class Optimize:\n",
     "    \"\"\" Модель для оптимизации продольного смещения. \"\"\"\n",
     "\n",
-    "    def __init__(self, cargo: list, step=1, border_epsilon_step=1, count_early_stop=100):\n",
-    "        \"\"\" step - шаг влево/вправо для оптимизации delta. \"\"\"\n",
+    "    def __init__(self, cargo: list, step=1, n_iter=1000):\n",
+    "        \"\"\" step - шаг влево/вправо для оптимизации. Чем меньше, тем лучше. От 1 до бесконечности - int.\n",
+    "        n_iter - кол-во повторений алгоритма для надёжности. Чем болешье, чем точнее, но медленнее. \"\"\"\n",
     "        \n",
     "        self.best_cargo = None\n",
-    "        self.score = float('inf')\n",
+    "        self.score_length = float('inf')\n",
+    "        self.score_width = float('inf')\n",
     "\n",
-    "        self._step = step\n",
-    "        self._border_epsilon_step = border_epsilon_step  # Рандомное значение добавляется к step.\n",
-    "        self._count_early_stop = count_early_stop\n",
+    "        self._step = step  # Чем меньше - тем лучше\n",
+    "        self._n_iter = n_iter  # Кол-во повторений\n",
     "        \n",
     "        self._optimize(cargo)\n",
     "\n",
     "\n",
-    "    def _init_delta(self, cargo: list, start_idx=0):\n",
+    "    def _init_delta(self, cargo: list):\n",
     "        \"\"\" Инициализация значений delta. Внутри создаёт новый cargo. \"\"\"\n",
     "    \n",
     "        # copy_cargo = copy.deepcopy(cargo)\n",
     "        copy_cargo = [{k:v for k, v in dct.items()} for dct in cargo]\n",
     "\n",
-    "        # Меняю очерёдность грузов на платформе.\n",
-    "        copy_cargo = copy_cargo[start_idx:] + copy_cargo[:start_idx]\n",
-    "        \n",
+    "        # Единственный ящик инициализирую в центре по ширине и длине.\n",
     "        if len(copy_cargo) == 1:\n",
-    "            copy_cargo[0]['delta'] = L / 2 - copy_cargo[0]['length'] / 2\n",
+    "            copy_cargo[0]['delta_length'] = L / 2 - copy_cargo[0]['length'] / 2\n",
+    "            copy_cargo[0]['delta_width'] = W / 2 - copy_cargo[0]['width'] / 2\n",
     "    \n",
     "        else:\n",
     "    \n",
     "            prev_border = 0\n",
     "            for idx, item in enumerate(copy_cargo):\n",
     "\n",
-    "                copy_cargo[idx]['delta'] = random.randint(prev_border, prev_border + free_L_for_one_cargo - 1)\n",
+    "                copy_cargo[idx]['delta_length'] = random.randint(prev_border, prev_border + free_L_for_one_cargo - 1)\n",
+    "\n",
+    "                # Всегда начинаем с центра ширины.\n",
+    "                copy_cargo[idx]['delta_width'] = W / 2 - copy_cargo[idx]['width'] / 2\n",
     "    \n",
     "                # Обновляем левую границу.\n",
     "                prev_border = prev_border + item['length'] + free_L_for_one_cargo\n",
-    "    \n",
+    "\n",
+    "        \n",
     "        return copy_cargo\n",
     "    \n",
     "    \n",
-    "    def _get_score(self, cargo: list):\n",
-    "        \"\"\" Получение метрик при изменённом delta у одного груза. \"\"\"\n",
+    "    def _get_score_length(self, cargo: list):\n",
+    "        \"\"\" Получение метрик при движения груза продольно. \"\"\"\n",
     "\n",
     "        # Продольное смещение грузов в вагоне - в мм.\n",
-    "        Lc = 0.5*L - (sum(map(lambda x: x['weight'] * x['delta'], cargo)) / weightSum)\n",
+    "        Lc = 0.5*L - (sum(map(lambda x: x['weight'] * x['delta_length'], cargo)) / weightSum)\n",
     "    \n",
     "        return Lc\n",
+    "\n",
+    "    def _get_score_width(self, cargo: list):\n",
+    "        \"\"\" Получение метрик при движения груза поперечно. \"\"\"\n",
+    "\n",
+    "        # Поперечное смещение грузов в вагоне - в мм.\n",
+    "        Bc = 0.5*W - (sum(map(lambda x: x['weight'] * x['delta_width'], cargo))) / weightSum\n",
+    "        return Bc\n",
     "    \n",
-    "    def _check_best_cargo(self, cargo: list):\n",
+    "    def _check_best_cargo(self, cargo: list, length_flag: bool):\n",
     "        \"\"\" Проверка метрик у обновлённого delta у cargo. \"\"\"\n",
     "\n",
-    "        score = self._get_score(cargo)\n",
-    "        if abs(score) < abs(self.score):\n",
-    "            self.best_cargo = cargo\n",
-    "            self.score = score\n",
-    "            return True\n",
+    "        # Для продольного смещения.\n",
+    "        if length_flag:\n",
+    "            score = self._get_score_length(cargo)\n",
+    "            if abs(score) < abs(self.score_length):\n",
+    "                self.best_cargo = cargo\n",
+    "                self.score_length = score\n",
+    "                return True\n",
+    "\n",
+    "        # Для поперечного.\n",
+    "        else:\n",
+    "            score = self._get_score_width(cargo)\n",
+    "            if abs(score) < abs(self.score_width):\n",
+    "                self.best_cargo = cargo\n",
+    "                self.score_width = score\n",
+    "                return True\n",
     "\n",
     "        return False\n",
     "    \n",
     "    def _optimize(self, cargo: list):\n",
     "        \"\"\" Процесс оптимизации delta. \"\"\"\n",
     "\n",
-    "        # Меняю очерёдность расположение каждого груза.\n",
-    "        for i in range(0, len(cargo)):\n",
-    "            print(f'Началась оптимизация, где первый груз с индексом {i}')\n",
-    "            copy_cargo = self._init_delta(cargo, i)\n",
-    "\n",
-    "            # Эпохи:\n",
-    "            counter = 0\n",
-    "            while counter < self._count_early_stop:\n",
-    "\n",
-    "                # Смещаю каждый груз влево и вправо на step, затем смотрю метрики.\n",
-    "                for k in range(len(copy_cargo)):\n",
-    "\n",
-    "                    left_step_cargo = [{k:v for k, v in dct.items()} for dct in copy_cargo]\n",
-    "                    new_step = self._step + random.randint(0, self._border_epsilon_step)\n",
-    "                    left_step_cargo[k]['delta'] -= new_step\n",
-    "                    \n",
-    "                    right_step_cargo = [{k:v for k, v in dct.items()} for dct in copy_cargo]\n",
-    "                    new_step = self._step + random.randint(0, self._border_epsilon_step)\n",
-    "                    right_step_cargo[k]['delta'] += new_step\n",
-    "\n",
-    "                    # Проверки на не наложение одного груза на другой.\n",
-    "                    # Нулевый элемент не выходит за пределы платформы слева.\n",
-    "                    if k == 0:\n",
-    "                        if left_step_cargo[k]['delta'] >= 0:\n",
-    "                            # проверка\n",
-    "                            if self._check_best_cargo(left_step_cargo):\n",
-    "                                counter = 0\n",
-    "                                copy_cargo = self.best_cargo\n",
+    "        for _ in range(self._n_iter):\n",
+    "            # Все перестановка имеющихся грузов.\n",
+    "            permutations_cargo = list(itertools.permutations(cargo))\n",
+    "    \n",
+    "            # Меняю очерёдность расположение каждого груза.\n",
+    "            for i in range(0, len(permutations_cargo)):\n",
+    "                copy_cargo = self._init_delta(permutations_cargo[i])\n",
+    "    \n",
+    "                # Эпохи для продольной оптимизации.\n",
+    "                flag_work_epoch = True\n",
+    "                while flag_work_epoch:\n",
+    "                    flag_work_epoch = False\n",
+    "    \n",
+    "                    # Смещаю каждый груз влево и вправо на step, затем смотрю метрики.\n",
+    "                    for k in range(len(copy_cargo)):\n",
+    "    \n",
+    "                        left_step_cargo = [{k:v for k, v in dct.items()} for dct in copy_cargo]\n",
+    "                        left_step_cargo[k]['delta_length'] -= self._step\n",
+    "                        \n",
+    "                        right_step_cargo = [{k:v for k, v in dct.items()} for dct in copy_cargo]\n",
+    "                        right_step_cargo[k]['delta_length'] += self._step\n",
+    "    \n",
+    "                        # Проверки на не наложение одного груза на другой.\n",
+    "                        # Нулевый элемент не выходит за пределы платформы слева.\n",
+    "                        if k == 0:\n",
+    "                            if left_step_cargo[k]['delta_length'] >= 0:\n",
+    "                                # проверка\n",
+    "                                if self._check_best_cargo(left_step_cargo, True):\n",
+    "                                    copy_cargo = self.best_cargo\n",
+    "                                    flag_work_epoch = True\n",
+    "                                    \n",
+    "                        # Последний элемент не выходит за пределы платформы справа.\n",
+    "                        elif k == len(copy_cargo) - 1:\n",
+    "                            if right_step_cargo[k]['delta_length'] + right_step_cargo[k]['length'] < L:\n",
+    "                                # проверка\n",
+    "                                if self._check_best_cargo(right_step_cargo, True):\n",
+    "                                    copy_cargo = self.best_cargo\n",
+    "                                    flag_work_epoch = True\n",
     "                                \n",
-    "                    # Последний элемент не выходит за пределы платформы справа.\n",
-    "                    elif k == len(copy_cargo) - 1:\n",
-    "                        if right_step_cargo[k]['delta'] + right_step_cargo[k]['length'] < L:\n",
+    "                        else:\n",
+    "                            # Проверка на не наложение правого груза на левый. \n",
+    "                            if left_step_cargo[k]['delta_length'] > left_step_cargo[k-1]['delta_length'] + left_step_cargo[k-1]['length']:\n",
+    "                                if self._check_best_cargo(left_step_cargo, True):\n",
+    "                                    copy_cargo = self.best_cargo\n",
+    "                                    flag_work_epoch = True\n",
+    "    \n",
+    "                            # Проверка на не наложение левого груза на превый. \n",
+    "                            if right_step_cargo[k]['delta_length'] + right_step_cargo[k]['length'] < right_step_cargo[k+1]['delta_length']:\n",
+    "                                if self._check_best_cargo(right_step_cargo, True):\n",
+    "                                    copy_cargo = self.best_cargo\n",
+    "                                    flag_work_epoch = True\n",
+    "\n",
+    "                # Эпохи для поперечной оптимизации.\n",
+    "                flag_work_epoch = True\n",
+    "                while flag_work_epoch:\n",
+    "                    flag_work_epoch = False\n",
+    "    \n",
+    "                    # Смещаю каждый груз влево и вправо на step, затем смотрю метрики.\n",
+    "                    for k in range(len(copy_cargo)):\n",
+    "    \n",
+    "                        bottom_step_cargo = [{k:v for k, v in dct.items()} for dct in copy_cargo]\n",
+    "                        bottom_step_cargo[k]['delta_width'] -= self._step\n",
+    "                        \n",
+    "                        top_step_cargo = [{k:v for k, v in dct.items()} for dct in copy_cargo]\n",
+    "                        top_step_cargo[k]['delta_width'] += self._step\n",
+    "    \n",
+    "                        # Проверки на то, чтобы груз не выходил на пределы платформы по бокам.\n",
+    "                        if bottom_step_cargo[k]['delta_width'] >= 0:\n",
     "                            # проверка\n",
-    "                            if self._check_best_cargo(right_step_cargo):\n",
-    "                                counter = 0\n",
+    "                            if self._check_best_cargo(bottom_step_cargo, False):\n",
     "                                copy_cargo = self.best_cargo\n",
-    "                            \n",
-    "                    else:\n",
-    "                        # Проверка на не наложение правого груза на левый. \n",
-    "                        if left_step_cargo[k]['delta'] > left_step_cargo[k-1]['delta'] + left_step_cargo[k-1]['length']:\n",
-    "                            if self._check_best_cargo(left_step_cargo):\n",
-    "                                counter = 0\n",
+    "                                flag_work_epoch = True\n",
+    " \n",
+    "                        if top_step_cargo[k]['delta_width'] + top_step_cargo[k]['width'] < W:\n",
+    "                            # проверка\n",
+    "                            if self._check_best_cargo(top_step_cargo, False):\n",
     "                                copy_cargo = self.best_cargo\n",
-    "\n",
-    "                        # Проверка на не наложение левого груза на превый. \n",
-    "                        if right_step_cargo[k]['delta'] + right_step_cargo[k]['length'] < right_step_cargo[k+1]['delta']:\n",
-    "                            if self._check_best_cargo(right_step_cargo):\n",
-    "                                counter = 0\n",
-    "                                copy_cargo = self.best_cargo\n",
-    "\n",
-    "                # После каждой эпохи увеличиваю.\n",
-    "                counter += 1\n",
-    "            print(self.score)        \n",
-    "\n",
-    "        return self.best_cargo, self.score\n",
+    "                                flag_work_epoch = True\n",
+    "    \n",
     "\n",
     "\n",
-    "tmp = Optimize(cargo, step=1, border_epsilon_step=5, count_early_stop=1000)\n",
-    "print(tmp.score)"
+    "\n",
+    "tmp = Optimize(cargo, step=1, n_iter=1000)\n",
+    "print(tmp.score_length, tmp.score_width)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "7bb2fb60-3752-4389-9139-72b9341d8f82",
+   "execution_count": 14,
+   "id": "475c01d6-0dd7-4f8d-b308-ac96f06ae79c",
    "metadata": {},
    "outputs": [
     {
@@ -376,25 +418,29 @@
        "  'width': 1720,\n",
        "  'height': 1150,\n",
        "  'weight': 1.865,\n",
-       "  'delta': 153},\n",
+       "  'delta_length': 145,\n",
+       "  'delta_width': 575.0},\n",
        " {'length': 3870,\n",
        "  'width': 2890,\n",
        "  'height': 1020,\n",
        "  'weight': 4.085,\n",
-       "  'delta': 4522},\n",
+       "  'delta_length': 4531,\n",
+       "  'delta_width': -10.0},\n",
        " {'length': 1080,\n",
        "  'width': 1580,\n",
        "  'height': 390,\n",
        "  'weight': 0.395,\n",
-       "  'delta': 8651},\n",
+       "  'delta_length': 8595,\n",
+       "  'delta_width': 645.0},\n",
        " {'length': 3650,\n",
        "  'width': 3320,\n",
        "  'height': 1500,\n",
        "  'weight': 6.67,\n",
-       "  'delta': 9749}]"
+       "  'delta_length': 9749,\n",
+       "  'delta_width': -225.0}]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0655966b-24e2-4be4-b038-c155818d1bf4",
+   "id": "957de03e-4c91-4b0d-9531-1da159d476e3",
    "metadata": {},
    "outputs": [],
    "source": []
